# vodozemac-ios

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh  cbindgen.toml  common.h  run_test.sh  vodozemac_ios.h
src/: account.rs  group_sessions.rs  lib.rs  sas.rs  session.rs  test_lib.c
